--- a/caddy/www/v2ray/index.html
+++ b/caddy/www/v2ray/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>我的世界</title>
+    <title>The new world</title>
     <meta name="author" content="pkfrom" />
     <meta name="keywords" content="404 page, css3, template, html5 template" />
     <meta name="description" content="404 - Page Template" />
